--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,9 @@
     </dependency>
   </dependencies>
   -->
+  <build>
+    <finalName>${project.artifactId}-${project.version}</finalName>
+  </build>         
   <dependencies>
     <dependency>
       <groupId>org.apache.httpcomponents</groupId>
