--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
   </parent>
     <groupId>com.aq</groupId>
     <artifactId>aqconnect</artifactId>
-    <version>1.5.4</version>
+    <version>1.5.4-optx-A0</version>
   <packaging>hpi</packaging>
 
   <properties>
